# PROJECT3

./: .gitignore  README.md  get_version.py  pyproject.toml  requirements.txt
research_analyst/config/: configuration.yaml
research_analyst/exception/: custom_exception.py
research_analyst/logger/: __init__.py
research_analyst/notebook/: test.ipynb
research_analyst/utils/: config_loader.py  model_loader.py
